# FastSurvival

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  conda_env_FastSurvival.yml  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/fastsurvival/: __init__.py  baselines_efficiency.py  coxph_beamsearch.py  make_glm_data.py
tests/: test_fastsurvival.py
