[tool.poetry]
name = "fastsurvival"
version = "0.1.0"
description = "A package for training the Cox proportional hazards model and doing variable selection in survival analysis!"
authors = ["Jiachang Liu"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
