[tool.poetry]
name = "fastsurvival"
version = "0.1.0"
description = "A package for training the Cox proportional hazards model and doing variable selection in survival analysis!"
authors = ["Jiachang Liu"]
license = "BSD 3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.2.6"
scipy = "^1.15.3"
scikit-learn = "^1.6.1"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
